--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,16 +1,26 @@
 .aboutContainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     height: 100vh;
 }
 
-.aboutContent {
+.aboutLeft {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
     animation: 1.5s ease-out 0s 1 slideLeftFade;
-    padding: 60px;
+    width: 60%;
+}
+
+.aboutRight {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    animation: 1.5s ease-out 0s 1 slideLeftFade;
+    width: 40%;
 }
 
 .aboutIntro {
@@ -53,24 +63,39 @@
 
 .aboutButton:focus {
     outline: none;
-  }
+}
+
+.aboutPhoto {
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border: solid 2px #AFD8F2;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 7em;
+}
+
+.aboutPhoto:hover {
+    cursor: default;
+    transition: transform .5s ease;
+    transform: scale(1.2);
+}
 
 @keyframes slideLeftFade {
     0% {
-        transform: translateX(-100%);
+        transform: translateX(-250%);
         opacity: 0;
-    }
-    25% {
-        opacity: .4;
-    }
-    50% {
-        opacity: .6;
-    }
-    75% {
-        opacity: .8;
     }
     100% {
         transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes Fade {
+    0% {
+        opacity: 0;
+    }
+    100% {
         opacity: 1;
     }
 }
