--- a/src/css/About.css
+++ b/src/css/About.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    animation: 1.15s ease-in 0s 1 slideLeftFade;
+    animation: 1.35s ease-in 0s 1 slideLeftFade;
     width: 60%;
 }
 
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    animation: 1.15s ease-in 0s 1 slideLeftFade;
+    animation: 1.35s ease-in 0s 1 slideLeftFade;
     width: 40%;
 }
 
@@ -29,13 +29,14 @@
     align-items: flex-start;
     max-height: 50vh;
 }
+
 .aboutQuotePic {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     max-height: 50vh;
-    width: 40%;
+    width: 50%;
 }
 
 .aboutMe {
@@ -44,13 +45,18 @@
     font-size: 38px;
 }
 
+.aboutMe:hover {
+    transition: transform .5s ease;
+    transform: scale(1.03);
+}
+
 .aboutButton {
-    max-width: 40%;
+    max-width: 60%;
     background-color: white;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px #AFD8F2;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -60,7 +66,8 @@
 }
 
 .aboutButton:hover {
-    background-color: rgb(248, 248, 248);
+    background-color: #AFD8F2;
+    color: white;
     cursor: pointer;
     transition: transform .5s ease;
     transform: scale(1.1);
@@ -74,16 +81,26 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px #AFD8F2;
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
-    border-radius: 7em;
+    border-radius: 2em;
 }
 
 .aboutPhoto:hover {
     cursor: default;
     transition: transform .5s ease;
-    transform: scale(2);
+    transform: scale(1.03);
+}
+
+.aboutQuote {
+    color: darkgrey;
+    font-size: 18px;
+}
+
+.aboutQuote:hover {
+    transition: transform .5s ease;
+    transform: scale(1.03);
 }
 
 
