--- a/src/css/About.css
+++ b/src/css/About.css
@@ -45,13 +45,15 @@
 }
 
 .aboutMe:hover {
+    cursor: default;
     transition: transform .5s ease;
     transform: scale(1.03);
 }
 
 .aboutButton {
+    background-color: #79bfeb;
+    color: white;
     max-width: 60%;
-    background-color: white;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border: solid 2px #79bfeb;
@@ -60,14 +62,13 @@
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
-    color: #79bfeb;
     border-radius: 12px;
     animation: 2.6s ease-in 0s 1 buttonSlideLeftFade;
 }
 
 .aboutButton:hover {
-    background-color: #79bfeb;
-    color: white;
+    background-color: white;
+    color: #79bfeb;
     cursor: pointer;
     transition: transform .5s ease;
     transform: scale(1.1);
@@ -101,6 +102,7 @@
 }
 
 .aboutQuote:hover {
+    cursor: default;
     transition: transform .5s ease;
     transform: scale(1.03);
 }
