--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -1,12 +1,89 @@
 .esContainer {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    height: fit-content;
+    flex-direction: row;
+    width: 100%;
+    height: 100vw;
+    background-color: #79bfeb;
 }
 
-.esContext {
+.esLeft {
+    display: flex;
+    margin-top: 2em;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+.esRight {
+    display: flex;
+    margin-top: 2em;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+.esPursuit {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    height: fit-content;
+    justify-content: space-evenly;
+}
+
+.esTitle {
+    color: white;
+    font-family: "Arial Black", sans-serif;
+    font-size: 40px;
+}
+
+.esTitle:hover {
+    cursor: default;
+    transition: transform .5s ease;
+    transform: scale(1.03);
+}
+
+.esP {
+    color: white;
+    font-size: 20px;
+    text-align: left;
+}
+
+.esP:hover {
+    cursor: default;
+    transition: transform .5s ease;
+    transform: scale(1.03);
+}
+
+.iconRow {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 25vh;
+    justify-content: space-evenly;
+}
+
+.skillsIcons {
+    width: 100px;
+    height: auto;
+    margin-bottom: 1em;
+}
+
+.skillsIcons:hover {
+    cursor: default;
+    transition: transform .5s ease;
+    transform: scale(1.75);
+}
+
+.hideTitle {
+    color: white;
+    display: none;
+    font-size: 30px;
+}
+
+.skillsIcons:hover + .hideTitle {
+    display: block;
+}
+
+/* .esContext {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -345,4 +422,4 @@
     .hideTitle {
         display: block;
     }
-}
+} */
