--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -1,7 +1,20 @@
-.esContainer {
+.esPage {
     height: 50vw;
     background-image: linear-gradient(45deg, #0231ce, #79bfeb);
     transform: skewY(-6deg);
+}
+
+.portfolioTitle{
+    color: #79bfeb;
+    font-family: "Arial Black", sans-serif;
+    font-size: 40px;
+    width: 34%;
+}
+
+.portfolioTitle:hover {
+    cursor: default;
+    transition: transform .5s ease;
+    transform: scale(1.03);
 }
 
 .esContext {
