--- a/src/css/About.css
+++ b/src/css/About.css
@@ -54,7 +54,20 @@
 
 .aboutName {
     color: #79bfeb;
-    font-style: normal;
+    font-family: "Arial Black", sans-serif;
+    font-size: 40px;
+    overflow: hidden;
+    border-right: .15em solid #79bfeb;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .1em;
+    animation: 
+    typing 4.5s steps(25, end) infinite,
+    blink-caret .75s step-end infinite ;
+}
+
+.terminal {
+    color: #79bfeb;
 }
 
 .aboutMe {
@@ -143,6 +156,17 @@
         opacity: 1;
     }
 }
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 50% }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #79bfeb; }
+}
+
 
 /* .aboutContext {
     display: flex;
